--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -43,6 +43,7 @@
     <script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.combobox.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.calendarselectable.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.connector.js")"></script>
+	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.tabberiet.js")"></script>
 
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Common.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Portal.js")"></script>
