--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -4,7 +4,7 @@
 @using Teleopti.Ccc.Web.Areas.MyTime.Models.Portal
 <nav id="tabs" class="main-nav">
 	<div class="floatright mr70 extraextrasmall">
-		<span id="licensed-to-label" class="floatleft">@Teleopti.Ccc.UserTexts.Resources.LicensedToColon</span><br />
+		<span id="licensed-to-label" class="floatleft">@Resources.LicensedToColon</span><br />
 		<span id="licensed-to-text">@Model.CustomerName</span>
 	</div>
 		<ul>
@@ -81,7 +81,7 @@
 	<section id="toolbar-right" class="col-main floatright">
 			<div class="toolbar-inner">
 				<dl class="dropdown">
-						<dt><span class="icon employee icon-left" title="@Teleopti.Ccc.UserTexts.Resources.UserName" id="username">@User.Identity.Name</span></dt>
+						<dt><span class="icon employee icon-left" title="@Resources.UserName" id="username">@User.Identity.Name</span></dt>
 						<dd>
 							<ul class="ui-widget-content">
 								<li><a href="#Settings/Index">@Resources.Settings</a></li>
