starting with change password

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -1,4 +1,24 @@
-﻿@{
+﻿@using Teleopti.Ccc.UserTexts
+@{
 	 Layout = null;
 }
-change passord.... yada yada.
+<div class="ui-corner-all">
+	<div>
+		nytt pw: @Html.Password("password", string.Empty, new { placeholder = Resources.Password })<br/>
+		repeat nytt pw: @Html.Password("passwordValidation", string.Empty, new { placeholder = Resources.Password })<br/>
+		old pw: @Html.Password("oldPassword", string.Empty, new { placeholder = "xxOld password" })
+		
+		<br/><br/>
+		<input type="button" value="xxSpara" id="passwordButton"/>
+	</div>
+</div>
+
+<script>
+	$("#passwordButton").click(function () {
+		alert('roger');
+	});
+	
+	function _updatePassword() {
+		
+	}
+</script>
