Change password task done

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -14,11 +14,25 @@
 </div>
 
 <script>
-	$("#passwordButton").click(function () {
-		alert('roger');
+	$("input#passwordButton").click(function () {
+		_updatePassword($("input#oldPassword").val(), $("input#password").val());
 	});
-	
-	function _updatePassword() {
-		
+
+	function _updatePassword(oldPassword, newPassword) {
+		var data = { OldPassword: oldPassword, NewPassword : newPassword };
+		$.ajax({
+			url: "Settings/ChangePassword",
+			dataType: "json",
+			contentType: 'application/json; charset=utf-8',
+			type: "PUT",
+			cache: false,
+			data: JSON.stringify(data),
+			success: function (data, textStatus, jqXHR) {
+				alert('done');
+			},
+			error: function (jqXHR, textStatus, errorThrown) {
+				Teleopti.MyTimeWeb.Common.AjaxFailed(jqXHR, null, textStatus);
+			}
+		});
 	}
 </script>
