--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -4,16 +4,39 @@
 }
 <div class="ui-corner-all">
 	<div>
-		nytt pw: @Html.Password("password", string.Empty, new { placeholder = Resources.Password })<br/>
-		repeat nytt pw: @Html.Password("passwordValidation", string.Empty, new { placeholder = Resources.Password })<br/>
-		old pw: @Html.Password("oldPassword", string.Empty, new { placeholder = "xxOld password" })
-		
-		<br/><br/>
-		<input type="button" value="xxSpara" id="passwordButton"/>
+		<p>
+			xxNew password<br/>
+			@Html.Password("password", string.Empty, new { placeholder = "xxNew password" })<br/>
+			@Html.Password("passwordValidation", string.Empty, new { placeholder = "xxConfirm new password" })
+			<label id="nonMatchingPassword" style="color: red; display:none">xxNew password don't match!</label>
+		</p>
+		<br/>
+		<p>
+			xxOld password<br/>
+			@Html.Password("oldPassword", string.Empty, new { placeholder = "xxOld password" })			
+		</p>
+		<br/>
+		<p>
+			<input type="button" value="xxSpara" id="passwordButton" disabled="disabled"/>
+		</p>
 	</div>
 </div>
 
 <script>
+	$("input#password, input#passwordValidation, input#oldPassword").keyup(function () {
+		var incorrectLabel = $("label#nonMatchingPassword");
+		var passwordButton = $("button#passwordButton");
+		var pw = $("input#password").val();
+		var pw2 = $("input#passwordValidation").val();
+		if (pw != pw2) {
+			incorrectLabel.show();
+			passwordButton.attr("disabled", "disabled");
+		} else {
+			incorrectLabel.hide();
+			passwordButton.removeAttr("disabled");
+		}
+	});
+
 	$("input#passwordButton").click(function () {
 		_updatePassword($("input#oldPassword").val(), $("input#password").val());
 	});
@@ -28,7 +51,7 @@
 			cache: false,
 			data: JSON.stringify(data),
 			success: function (data, textStatus, jqXHR) {
-				alert('done');
+
 			},
 			error: function (jqXHR, textStatus, errorThrown) {
 				Teleopti.MyTimeWeb.Common.AjaxFailed(jqXHR, null, textStatus);
