fixing show button correctly

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -25,7 +25,7 @@
 <script>
 	$("input#password, input#passwordValidation, input#oldPassword").keyup(function () {
 		var incorrectLabel = $("label#nonMatchingPassword");
-		var passwordButton = $("button#passwordButton");
+		var passwordButton = $("input#passwordButton");
 		var pw = $("input#password").val();
 		var pw2 = $("input#passwordValidation").val();
 		if (pw != pw2) {
