--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -19,7 +19,7 @@
 	 }
  </div>
 <div id="Preference-body" class="body-calendarview clearfix" data-mytime-periodselection='@Html.Schedule().PeriodSelectionAsJson(Model.PeriodSelection)'>
-	<style>
+	<style id="Preference-styles">
 		@foreach (var style in Model.Styles)
 		{
 			@string.Format(".calendarview-week li.{0} div {{border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
