entering wrong old password done

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -7,13 +7,14 @@
 		<p>
 			xxNew password<br/>
 			@Html.Password("password", string.Empty, new { placeholder = "xxNew password" })<br/>
-			@Html.Password("passwordValidation", string.Empty, new { placeholder = "xxConfirm new password" })
+			@Html.Password("passwordValidation", string.Empty, new { placeholder = "xxConfirm password" })
 			<label id="nonMatchingPassword" style="color: red; display:none">xxNew password don't match!</label>
 		</p>
 		<br/>
 		<p>
 			xxOld password<br/>
-			@Html.Password("oldPassword", string.Empty, new { placeholder = "xxOld password" })			
+			@Html.Password("oldPassword", string.Empty, new { placeholder = "xxOld password" })
+			<label id="incorrectOldPassword" style="color: red; display:none">xxWrong password!</label>	
 		</p>
 		<br/>
 		<p>
