--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -85,7 +85,7 @@
 						<dd>
 							<ul class="ui-widget-content">
 								<li><a href="#Settings/Index">@Resources.Settings</a></li>
-								<li><a href="#Settings/Password">xxChange Password</a></li>
+								<li><a href="#Settings/Password">@Resources.ChangeYourPassword</a></li>
 								<li>&nbsp;</li>
 								<li>@Html.ActionLink(@Resources.LogOut, "SignOut", "Authentication", new { area = "Start" }, new { id = "signout" })</li>
 							</ul>
