--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -5,20 +5,24 @@
 <div class="ui-corner-all">
 	<div>
 		<p>
-			xxNew password<br/>
-			@Html.Password("password", string.Empty, new { placeholder = "xxNew password" })<br/>
-			@Html.Password("passwordValidation", string.Empty, new { placeholder = "xxConfirm password" })
-			<label id="nonMatchingPassword" style="color: red; display:none">xxNew password don't match!</label>
+			@Resources.NewPassword<br/>
+			@Html.Password("password", string.Empty, new { placeholder = @Resources.NewPassword })<br/>
+			@Html.Password("passwordValidation", string.Empty, new { placeholder = @Resources.ConfirmNewPassword })
+			<label id="nonMatchingPassword" style="color: red; display:none">@Resources.PasswordsDoNotMatch</label>
 		</p>
 		<br/>
 		<p>
-			xxOld password<br/>
-			@Html.Password("oldPassword", string.Empty, new { placeholder = "xxOld password" })
-			<label id="incorrectOldPassword" style="color: red; display:none">xxWrong password!</label>	
+			@Resources.PasswordOld<br/>
+			@Html.Password("oldPassword", string.Empty, new { placeholder = @Resources.PasswordOld })
+			<label id="incorrectOldPassword" style="color: red; display:none">@Resources.PasswordWrong</label>	
 		</p>
 		<br/>
 		<p>
-			<input type="button" value="xxSpara" id="passwordButton" disabled="disabled"/>
+			<label id="updated" style="color: red; display:none">@Resources.Updated</label>	
+		</p>
+		<br/>
+		<p>
+			<input type="button" value="@Resources.Update" id="passwordButton" disabled="disabled"/>
 		</p>
 	</div>
 </div>
