Splitbutton now displays preference colors!

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/jquery.ui.splitbutton.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/jquery.ui.splitbutton.css
@@ -27,6 +27,21 @@
 	white-space: nowrap;
 }
 
+.ui-splitbutton-menu li
+{
+	position: relative;	
+}
+.ui-splitbutton-menu-text
+{
+}
+.ui-splitbutton-menu-icon-secondary
+{
+	position: absolute;
+	right: 4px;
+	width: 18px;
+	height: 18px;
+}
+
 .ui-splitbutton-menu .ui-splitbutton-menu-splitter 
 {
 	padding: 5px;
