--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -1,92 +1,92 @@
-﻿@model PortalViewModel
+﻿@using Teleopti.Ccc.UserTexts
 @using Teleopti.Ccc.Web.Areas.MyTime.Core
 @using Teleopti.Ccc.Web.Areas.MyTime.Models.Portal
+@model PortalViewModel
 <nav id="tabs" class="main-nav">
-<div class="floatright mr70 extraextrasmall">
-	<span id="licensed-to-label" class="floatleft">@Teleopti.Ccc.UserTexts.Resources.LicensedToColon</span><br />
-	<span id="licensed-to-text">@Model.CustomerName</span>
-</div>
-		<ul>
-			@foreach (var navSection in Model.NavigationItems)
-   {
-			<li><a href="@string.Format("#{0}Tab", navSection.Controller)" data-mytime-action="@Html.Portal().GetAction(navSection)">@navSection.Title</a></li>
-   }
-		</ul>
+	<div class="floatright mr70 extraextrasmall">
+		<span id="licensed-to-label" class="floatleft">@Resources.LicensedToColon</span><br />
+		<span id="licensed-to-text">@Model.CustomerName</span>
+	</div>
+	<ul>
 		@foreach (var navSection in Model.NavigationItems)
-		 {
-		 	<section id="@string.Format("{0}Tab", navSection.Controller)" class="col-2-3 floatleft toolbar-left ui-tabs-panel ui-widget-content ui-corner-bottom">
-				<div class="toolbar-inner">
-					@**** - Commented this until we add Month schedule view -  ****@
-					@*<div id="@string.Format("{0}TabNav", navSection.Controller)" class="buttonset-nav floatleft">
-					@foreach (var navItem in navSection.NavigationItems)
-	 {
-					<input type="radio" id="@Html.Portal().GetId(navItem)" name="@Html.Portal().GetId(navItem)"  data-mytime-action="@Html.Portal().GetAction(navItem)" /><label for="@Html.Portal().GetId(navItem)" title="@Html.AttributeEncode(navItem.Title)">@navItem.Title</label>
-	 }
-				</div>*@
-					@foreach (var toolbarItem in navSection.ToolBarItems)
+		{
+			<li><a href="@string.Format("#{0}Tab", navSection.Controller)" data-mytime-action="@Html.Portal().GetAction(navSection)">@navSection.Title</a></li>
+		}
+	</ul>
+	@foreach (var navSection in Model.NavigationItems)
+	{
+		<section id="@string.Format("{0}Tab", navSection.Controller)" class="col-2-3 floatleft toolbar-left ui-tabs-panel ui-widget-content ui-corner-bottom">
+			<div class="toolbar-inner">
+				@foreach (var toolbarItem in navSection.ToolBarItems)
+				{
+					if (toolbarItem is ToolBarSeparatorItem)
 					{
-						if (toolbarItem is ToolBarSeparatorItem)
+						<div class="seperator"></div>
+					}
+					if (toolbarItem is ToolBarDatePicker)
+					{
+						var dpicker = toolbarItem as ToolBarDatePicker;
+						<div id="@string.Format("{0}DateRangeSelector", navSection.Controller)" class="date-range-selector floatleft ml10">
+							<button data-mytime-action="#" class="first">@dpicker.PrevTitle</button>
+							<input id="@string.Format("{0}DatePicker", navSection.Controller)" type="text" class="datepicker" />
+							<button data-mytime-action="#" class="last">@dpicker.NextTitle</button>
+							<span class="selected-date-period displayblock"></span>
+							<a class="displaynone" data-mytime-action="#"></a>
+						</div>
+					}
+					if (toolbarItem is ToolBarButtonItem)
+					{
+						var button = toolbarItem as ToolBarButtonItem;
+						<button title="@Html.AttributeEncode(button.Title)" id="@string.Format("{0}-{1}-button", navSection.Controller, button.ButtonType)" disabled="disabled" class="toolbar-@Html.Raw(button.ButtonType) icon ir floatleft mr10">@button.Title</button>
+					}
+					if (toolbarItem is ToolBarSplitButton)
+					{
+						var splitButton = toolbarItem as ToolBarSplitButton;
+						foreach (var option in splitButton.Options.Where(s => s.Style != null))
 						{
-							<div class="seperator"></div>
+							<style>
+								@string.Format(".{0} .ui-splitbutton-menu-icon-secondary {{ background-color: {1}; }}", option.Style.Name, option.Style.ColorHex)
+							</style>
 						}
-						if (toolbarItem is ToolBarDatePicker)
-						{
-							ToolBarDatePicker dpicker = toolbarItem as ToolBarDatePicker;
-							<div id="@string.Format("{0}DateRangeSelector", navSection.Controller)" class="date-range-selector floatleft ml10">
-								<button data-mytime-action="#" class="first">@dpicker.PrevTitle</button>
-								<input id="@string.Format("{0}DatePicker", navSection.Controller)" type="text" class="datepicker" />
-								<button data-mytime-action="#" class="last">@dpicker.NextTitle</button>
-								<span class="selected-date-period displayblock"></span>
-								<a class="displaynone" data-mytime-action="#"></a>
-							</div>
-						}
-						if (toolbarItem is ToolBarButtonItem)
-						{
-							ToolBarButtonItem button = toolbarItem as ToolBarButtonItem;
-							<button title="@Html.AttributeEncode(button.Title)" id="@string.Format("{0}-{1}-button", navSection.Controller, button.ButtonType)" disabled="disabled" class="toolbar-@Html.Raw(button.ButtonType) icon ir floatleft mr10">@button.Title</button>
-						}
-						if (toolbarItem is ToolBarSplitButton)
-						{
-							ToolBarSplitButton splitButton = toolbarItem as ToolBarSplitButton;
-							<div class="floatleft" id="@string.Format("{0}", navSection.Controller)">
-								<button title="@Html.AttributeEncode(splitButton.Title)" id="@string.Format("{0}-set-button", navSection.Controller)"></button>
-								<select title="@Html.AttributeEncode(splitButton.Title)" id="@string.Format("{0}-list", navSection.Controller)">
-									@foreach (var preferenceOption in splitButton.PreferenceOptions)
-									{
-										<option value="@preferenceOption.Value">@preferenceOption.Text</option>
-									}
-								</select>
-							</div>
-						}
-						if (toolbarItem is ToolBarSelectBox)
-						{
-							ToolBarSelectBox selectBox = toolbarItem as ToolBarSelectBox;
-							<select title="@Html.AttributeEncode(selectBox.Title)" class="ui-selectbox-init floatleft" id="@string.Format("{0}-{1}-select", navSection.Controller, selectBox.Type)">
-								@foreach (var option in selectBox.Options)
+						<div class="floatleft" id="@string.Format("{0}", navSection.Controller)">
+							<button title="@Html.AttributeEncode(splitButton.Title)" id="@string.Format("{0}-set-button", navSection.Controller)"></button>
+							<select title="@Html.AttributeEncode(splitButton.Title)" id="@string.Format("{0}-list", navSection.Controller)">
+								@foreach (var option in splitButton.Options)
 								{
-									<option value="@option.Value">@option.Text</option>
+									<option value="@option.Value" class="@(option.Style != null ? option.Style.Name : "")">@option.Text</option>
 								}
 							</select>
-						}
+						</div>
 					}
-				</div>
-			</section>
-		 }
-			
-		<section id="toolbar-right" class="col-main floatright">
-			<div class="toolbar-inner">
-				<div class="floatleft">
-					<span class="icon employee icon-left" title="@Teleopti.Ccc.UserTexts.Resources.UserName" id="username">@User.Identity.Name</span>
-				</div>
-				<div class="seperator" style="visibility:hidden"></div>
-				<div class="floatleft" style="visibility:hidden">
-					<button class="icon icon-left mail" title="Inbox">(0)</button>
-				</div>
-				<div class="seperator"></div>
-				<div class="floatleft">
-					@Html.ActionLink("Log out", "SignOut", "Authentication", new { area = "Start" }, new { @class = "ir icon logout", title = @Teleopti.Ccc.UserTexts.Resources.LogOut, id = "signout" })
-				</div>
+					if (toolbarItem is ToolBarSelectBox)
+					{
+						var selectBox = toolbarItem as ToolBarSelectBox;
+						<select title="@Html.AttributeEncode(selectBox.Title)" class="ui-selectbox-init floatleft" id="@string.Format("{0}-{1}-select", navSection.Controller, selectBox.Type)">
+							@foreach (var option in selectBox.Options)
+							{
+								<option value="@option.Value">@option.Text</option>
+							}
+						</select>
+					}
+				}
 			</div>
 		</section>
+	}
+			
+	<section id="toolbar-right" class="col-main floatright">
+		<div class="toolbar-inner">
+			<div class="floatleft">
+				<span class="icon employee icon-left" title="@Resources.UserName" id="username">@User.Identity.Name</span>
+			</div>
+			<div class="seperator" style="visibility: hidden"></div>
+			<div class="floatleft" style="visibility: hidden">
+				<button class="icon icon-left mail" title="Inbox">(0)</button>
+			</div>
+			<div class="seperator"></div>
+			<div class="floatleft">
+				@Html.ActionLink("Log out", "SignOut", "Authentication", new {area = "Start"}, new {@class = "ir icon logout", title = Resources.LogOut, id = "signout"})
+			</div>
+		</div>
+	</section>
 				
-	 </nav>
+</nav>
