--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -81,7 +81,7 @@
 	<section id="toolbar-right" class="col-main floatright">
 			<div class="toolbar-inner">
 				<dl class="dropdown">
-						<dt><span class="icon employee icon-left" title="@Resources.UserName" id="username">@User.Identity.Name</span></dt>
+						<dt><span class="icon employee icon-left" id="username">@User.Identity.Name</span></dt>
 						<dd>
 							<ul class="ui-widget-content">
 								<li><a href="#Settings/Index">@Resources.Settings</a></li>
