Anders wish (my profile): Culture should be Date Format

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/RegionalSettingsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/RegionalSettingsPartial.cshtml
@@ -12,7 +12,7 @@
 		@Html.DropDownListFor(x => x.ChoosenUiCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureUiSelect" })
 	</p>
 	<p style="height: 50px">
-		@Resources.CultureText<br/>
+		@Resources.DateFormat<br/>
 		@Html.DropDownListFor(x => x.ChoosenCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureSelect" })
 	</p>
 </div>
