Anders wish (my profile): Ok password change end should result in green text, not red.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -18,7 +18,7 @@
 		</p>
 		<br/>
 		<p>
-			<label id="updated" style="color: red; display:none">@Resources.Updated</label>	
+			<label id="updated" style="color: green; display:none">@Resources.Updated</label>	
 		</p>
 		<br/>
 		<p>
