Anders wish (my profile): A successful path changing password should reset inputs

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -3,7 +3,7 @@
 	 Layout = null;
 }
 <div class="ui-corner-all">
-	<div>
+	<div id="passwordDiv">
 		<p>
 			@Resources.NewPassword<br/>
 			@Html.Password("password", string.Empty, new { placeholder = @Resources.NewPassword })<br/>
