--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
@@ -4,7 +4,7 @@
 @{ Layout = "~/Areas/MobileReports/Views/Shared/MobileLayoutBase.cshtml"; }
 @section csshead {
 	<link rel="stylesheet" href="@Url.Content("~/Areas/MobileReports/Content/Css/mobile.custom.css")" />
-	<link rel="stylesheet" href="@Url.Content("~/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.css")" />
+	<link rel="stylesheet" href="@Url.Content("~/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.min.css")" />
 }
 @section jsBeforeMobile {
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/Teleopti.MobileReports.Common.js")"></script>
@@ -19,7 +19,7 @@
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.setting.skillpicker.js")"></script>
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.report.graph.js")"></script>
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.report.table.js")"></script>
-	<script src="@Url.Content("~/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.js")"></script>
+	<script src="@Url.Content("~/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.min.js")"></script>
 	<script>
 		$.extend($.mobile.datebox.prototype.options.lang, {
 			'loc': @Html.Raw(Model.DateBoxGlobalization.ToJson())
