--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.css
@@ -1,5 +1,8 @@
-/* jQuery-Mobile-DateBox Plugin
- * contains all plugin styles
+/*
+ * jQuery Mobile Framework : plugin to provide a date and time picker.
+ * Copyright (c) JTSage
+ * CC 3.0 Attribution.  May be relicensed without permission/notification.
+ * https://github.com/jtsage/jquery-mobile-datebox
  */
  
 /* Base input element Styles */
@@ -7,16 +10,19 @@
 .ui-input-datebox { width: 97%; background-image: none; padding: .4em; line-height: 1.4; font-size: 16px; display: block; padding-top: 0px; padding-bottom: 0px; } 
 .ui-input-datebox { min-height: 38px; } /* Fix for IE8 */
 .ui-input-datebox .ui-btn-icon-notext { margin-top: 5px !important; margin-bottom: 5px !important; }
-.ui-input-datebox input { width: 87% !important; padding: 0 !important; margin-top: 5px !important; border: 1px solid transparent !important; vertical-align: middle; display: inline-block !important; background-color: transparent; zoom: 1; *display: inline; }
+.ui-input-datebox input { width: 100% !important; padding: 0 !important; margin-top: 5px !important; margin-right: -40px !important; border: 1px solid transparent !important; vertical-align: middle; display: inline-block !important; background-color: transparent; zoom: 1; *display: inline; }
 .ui-input-datebox input:focus { outline: none;}
 .ui-input-datebox .ui-btn-text {display: none;}
 
-@media all and (max-width: 650px){ /* Fix internal input element at low size */
-  .ui-input-datebox input { width: 80% !important; }
-}
 @media all and (min-width: 450px){
   .ui-input-datebox { width: 60%; display: inline-block; zoom:1; *display: inline; }
 }
+
+/* Full width if in a grid, ignore the media query */
+.ui-grid-a .ui-input-datebox { width: 97%; }
+.ui-grid-b .ui-input-datebox { width: 97%; }
+.ui-grid-c .ui-input-datebox { width: 97%; }
+.ui-grid-d .ui-input-datebox { width: 97%; }
 
 /* Calendar Mode Styles */
 
@@ -31,6 +37,7 @@
 .ui-datebox-griddate { width: 36px; height: 30px; display: inline-block; vertical-align: middle; text-align: center; line-height: 30px; font-weight: bold; font-size: 12px; zoom:1; *display: inline;}
 .ui-datebox-griddate-empty { border: 1px solid transparent; color: #888; }
 .ui-datebox-griddate-label { height: 15px !important; line-height: 15px !important; color: black;}
+.ui-datebox-griddate-disable { color: #888; }
 
 /* Android Mode Styles */
 
@@ -73,6 +80,7 @@
 .ui-datebox-screen-modal { background-color: black; -moz-opacity: 0.8; opacity:.80; filter: alpha(opacity=80); }
 .ui-datebox-hidden { display: none; }
 .ui-dialog .ui-datebox-container { border: none !important; }
+.ui-datebox-collapse a { display: inline-block; width: 45% }
 
 .ui-datebox-inline { margin-top: 5px; border: 5px solid #111111 !important; margin-left: auto; margin-right: auto; text-align: center; }
 .ui-datebox-inlineblind { margin-top: 5px; border: 5px solid #111111 !important; margin-left: auto; margin-right: auto; text-align: center; }
