--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
@@ -15,7 +15,7 @@
 	<script src="@Url.Content("~/Content/Scripts/RGraph.common.key.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/RGraph.bar.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/RGraph.line.js")"></script>
-	<!--[if lt IE 9]><script src="@Url.Content("~/Content/Scripts/excanvas.compressed.js")"></script><![endif]-->
+	<!--[if lt IE 9]><script src="@Url.Content("~/Content/Scripts/excanvas.original.js")"></script><![endif]-->
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.setting.skillpicker.js")"></script>
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.report.graph.js")"></script>
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.report.table.js")"></script>
