a little fräschare menu

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -83,11 +83,11 @@
 				<dl class="dropdown">
 						<dt><span class="icon employee icon-left" id="username">@User.Identity.Name</span></dt>
 						<dd>
-							<ul class="ui-widget-content">
-								<li><a href="#Settings/Index">@Resources.Settings</a></li>
-								<li><a href="#Settings/Password">@Resources.ChangeYourPassword</a></li>
+							<ul class="ui-widget-content ui-corner-all ui-menu">
+								<li class="ui-menu-item"><a href="#Settings/Index" class="ui-corner-all">@Resources.Settings</a></li>
+								<li class="ui-menu-item"><a href="#Settings/Password" class="ui-corner-all">@Resources.ChangeYourPassword</a></li>
 								<li>&nbsp;</li>
-								<li>@Html.ActionLink(@Resources.LogOut, "SignOut", "Authentication", new { area = "Start" }, new { id = "signout" })</li>
+								<li class="ui-menu-item">@Html.ActionLink(@Resources.LogOut, "SignOut", "Authentication", new { area = "Start" }, new { id = "signout",@class="ui-corner-all" })</li>
 							</ul>
 						</dd>
 				</dl>
