finishing myprofile for now

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/RegionalSettingsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/RegionalSettingsPartial.cshtml
@@ -7,11 +7,11 @@
 <div id="settings" class="edit-module">
 	<div id="selectors" class="edit-module-inner">
 		<div class="edit-module-element">
-			<label>@Resources.Language</label><br/>
+			<label>@Resources.Language</label>
 			@Html.DropDownListFor(x => x.ChoosenUiCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureUiSelect" })
 		</div>
-		<div class="edit-module-element">
-			<label>@Resources.DateFormat</label><br/>
+		<div class="edit-module-element pdt15">
+			<label>@Resources.DateFormat</label>
 			@Html.DropDownListFor(x => x.ChoosenCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureSelect" })
 		</div>
 	</div>
