--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/PasswordPartial.cshtml
@@ -1,28 +1,23 @@
 ﻿@using Teleopti.Ccc.UserTexts
 @{
-	 Layout = null;
+	Layout = null;
 }
-<div class="ui-corner-all">
-	<div id="passwordDiv">
-		<p>
-			@Resources.NewPassword<br/>
-			@Html.Password("password", string.Empty, new { placeholder = @Resources.NewPassword })<br/>
+<div id="settings" class="edit-module">
+	<div class="edit-module-inner" id="passwordDiv">
+		<div class="edit-module-element">
+			<label>@Resources.NewPassword</label>
+			@Html.Password("password", string.Empty, new { placeholder = @Resources.NewPassword })<br />
 			@Html.Password("passwordValidation", string.Empty, new { placeholder = @Resources.ConfirmNewPassword })
-			<label id="nonMatchingPassword" style="color: red; display:none">@Resources.PasswordsDoNotMatch</label>
-		</p>
-		<br/>
-		<p>
-			@Resources.PasswordOld<br/>
+			<span id="nonMatchingPassword" style="color: red; display: none">@Resources.PasswordsDoNotMatch</span>
+		</div>
+		<div class="edit-module-element pdt10">
+			<label>@Resources.PasswordOld</label>
 			@Html.Password("oldPassword", string.Empty, new { placeholder = @Resources.PasswordOld })
-			<label id="incorrectOldPassword" style="color: red; display:none">@Resources.PasswordWrong</label>	
-		</p>
-		<br/>
-		<p>
-			<label id="updated" style="color: green; display:none">@Resources.Updated</label>	
-		</p>
-		<br/>
-		<p>
+			<span id="incorrectOldPassword" style="color: red; display: none">@Resources.PasswordWrong</span>
+		</div>
+		<div class="edit-module-element pdt20">
+			<label id="updated" style="color: green; display: none">@Resources.Updated</label>
 			<input type="button" value="@Resources.Update" id="passwordButton" disabled="disabled"/>
-		</p>
+		</div>
 	</div>
 </div>
