--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Settings.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Settings.css
@@ -1,3 +1,12 @@
-﻿#settings.edit-module {
+﻿#settings.edit-module
+{
 	margin: 0px;
+}
+#settings .ui-selectbox
+{
+	width: 320px;
+}
+#settings .ui-selectbox-menu a
+{
+	width: 263px;
 }
