--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/jquery.ui.selectbox.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/jquery.ui.selectbox.css
@@ -32,6 +32,7 @@
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	font-size: 10px;
 }
 .ui-selectbox .ui-button-text .notused
 {
