--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/App_Themes/Theme1/calendar.css
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/App_Themes/Theme1/calendar.css
@@ -49,7 +49,7 @@
     width: 170px;
     font-size: 11px;
     text-align: center;
-    font-family: tahoma, .MyCalendar verdana, .MyCalendar helvetica;
+    font-family: Tahoma, verdana, helvetica;
 }
 .MyCalendar .ajax__calendar_body {
     height: 139px;
