Added more test code for session handling
--HG--
branch : Release 7.1.356

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
@@ -6,7 +6,11 @@
 	<script type="text/javascript">
 		jQuery(function () { 
 			$.datepicker.setDefaults(@Html.LayoutBase().DatePickerGlobalizationAsJson());
-			Teleopti.MyTimeWeb.Portal.Init({ defaultNavigation: '@Html.Portal().GetDefaultAction(Model)', baseUrl: '@Url.Content("~/MyTime/")' });
+			Teleopti.MyTimeWeb.Portal.Init(
+				{
+					defaultNavigation: '@Html.Portal().GetDefaultAction(Model)',
+					baseUrl: '@Url.Content("~/MyTime/")'
+				});
 		});
 	</script>
 }
