--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -19,6 +19,7 @@
 	<link href="@Url.Content("~/Content/themes/base/jquery.qtip.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/Site.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/TeamSchedule.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/Areas/MyTime/Content/Css/Request.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/Preference.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/Settings.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Areas/MyTime/Content/Css/WeekView.css")" rel="stylesheet" type="text/css" />
