Fix so that session tests now works with the app in a sub path...

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
@@ -9,7 +9,8 @@
 			Teleopti.MyTimeWeb.Portal.Init(
 				{
 					defaultNavigation: '@Html.Portal().GetDefaultAction(Model)',
-					baseUrl: '@Url.Content("~/MyTime/")'
+					baseUrl: '@Url.Content("~/MyTime/")',
+					startBaseUrl: '@Url.Content("~/Start/")'
 				});
 		});
 	</script>
