System should now be aware of what type of authentication user has used.
Win or form? Put on identity object.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Authentication/SignInBusinessUnitPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Authentication/SignInBusinessUnitPartial.cshtml
@@ -29,5 +29,6 @@
         </div>
 		@Html.HiddenFor(m => m.SignIn.DataSourceName)
 		@Html.HiddenFor(m => m.SignIn.PersonId)
+		@Html.HiddenFor(m => m.SignIn.AuthenticationType)
     }    
 </div>
